--- a/client/package.json
+++ b/client/package.json
@@ -87,6 +87,7 @@
   },
   "dependencies": {
     "@atlaskit/datetime-picker": "10.0.1",
+    "@atlaskit/calendar": "10.3.1",
     "@atlaskit/icon": "21.1.2",
     "adblock-detect": "1.0.5",
     "angular": "1.6.9",
