Use nanasess/setup-chromedriver github action Trying to simplify our CI setup I'm giving a shot to this action setup https://github.com/nanasess/setup-chromedriver

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -112,16 +112,16 @@ jobs:
         (nohup sudo python -m smtpd -n -c DebuggingServer localhost:2225 &)
 
     - name: Build client and run e2e tests
+      uses: nanasess/setup-chromedriver@master
       working-directory: ./client
       run: |
         grunt build --server='http://localhost:5000/api' --ws='ws://localhost:5100'
         cd dist
         while [ ! -f index.html ]; do sleep .5; done
         (nohup python -m http.server 9000 &)
-        cd ../
-        export DISPLAY=:99.0
-        /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1080x24
-        export CHROME_BIN=`which google-chrome`
+        export DISPLAY=:99
+        chromedriver --url-base=/wd/hub &
+        sudo Xvfb -ac :99 -screen 0 1920x1080x24 > /dev/null 2>&1 &
         $CHROME_BIN --version
-        CHROMEDRIVER_VERSION=89.0.4389.23 npm run webdriver-update
+        cd ../
         npm run e2e
