--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -42,6 +42,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: nanasess/setup-chromedriver@master
 
     - name: Cache node modules
       uses: actions/cache@v2
@@ -112,7 +113,6 @@ jobs:
         (nohup sudo python -m smtpd -n -c DebuggingServer localhost:2225 &)
 
     - name: Build client and run e2e tests
-      uses: nanasess/setup-chromedriver@master
       working-directory: ./client
       run: |
         grunt build --server='http://localhost:5000/api' --ws='ws://localhost:5100'
