--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -120,7 +120,8 @@ jobs:
         while [ ! -f index.html ]; do sleep .5; done
         (nohup python -m http.server 9000 &)
         export DISPLAY=:99
-        chromedriver --url-base=/wd/hub &
+        export SELENIUM_ADDRESS='http://localhost:4444/wd/hub'
+        chromedriver --port=4444 --url-base=/wd/hub &
         sudo Xvfb -ac :99 -screen 0 1920x1080x24 > /dev/null 2>&1 &
         $CHROME_BIN --version
         cd ../
