Fix advertising manager tests - try #1

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -42,7 +42,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: nanasess/setup-chromedriver@v1.0.5
+    - uses: nanasess/setup-chromedriver@master
 
     - name: Cache node modules
       uses: actions/cache@v2
