Update dependency protocol to avoid issues
Github announced some improvements to git protocol on github. More info about it here:
https://github.blog/2021-09-01-improving-git-protocol-security-github/#no-more-unauthenticated-git

```
January 11, 2022 Final brownout.

This is the full brownout period where we’ll temporarily stop accepting the deprecated key and signature types, ciphers, and MACs, and the unencrypted Git protocol.
This will help clients discover any lingering use of older keys or old URLs.
```

--- a/client/package.json
+++ b/client/package.json
@@ -93,7 +93,7 @@
     "angular": "1.6.9",
     "angular-animate": "1.6.1",
     "angular-contenteditable": "0.3.9",
-    "angular-embed": "eos87/angular-embed#13e145a8ce6f7cb9d877e32504a4c2af61a1b490",
+    "angular-embed": "git+https://github.com/eos87/angular-embed#13e145a8ce6f7cb9d877e32504a4c2af61a1b490",
     "angular-gettext": "2.3.10",
     "angular-messages": "1.6.6",
     "angular-mocks": "1.6.9",
@@ -102,12 +102,12 @@
     "angular-route": "1.6.9",
     "angular-vs-repeat": "1.1.7",
     "eslint-loader": "^2.1.2",
-    "eventable": "madebymany/eventable",
+    "eventable": "git+https://github.com/madebymany/eventable",
     "gridster": "0.5.6",
     "jquery": "^3.5.1",
     "jquery-jcrop": "0.9.13",
-    "jquery-ui": "components/jqueryui#1.11.4",
-    "jquery.gridster": "dustmoo/gridster.js#c306335397816beceb74e4a176067baef34a0359",
+    "jquery-ui": "git+https://github.com/components/jqueryui#1.11.4",
+    "jquery.gridster": "git+https://github.com/dustmoo/gridster.js#c306335397816beceb74e4a176067baef34a0359",
     "lodash": "4.17.15",
     "lodash.sortbyorder": "3.4.4",
     "lr-infinite-scroll": "1.0.0",
@@ -117,15 +117,15 @@
     "moment": "2.20.1",
     "moment-timezone": "0.5.14",
     "ng-file-upload": "12.2.13",
-    "ng-sir-trevor": "superdesk/ng-sir-trevor",
+    "ng-sir-trevor": "git+https://github.com/superdesk/ng-sir-trevor",
     "object-hash": "^2.1.1",
     "rangy": "1.3.0",
     "raven-js": "3.22.3",
     "react-select": "^3.0.4",
     "sanitize-html": "^1.18.2",
-    "sir-trevor": "liveblog/sir-trevor-js",
+    "sir-trevor": "git+https://github.com/liveblog/sir-trevor-js",
     "styled-components": "^5.1.1",
-    "superdesk-core": "eos87/superdesk-client-core#v1.17.0-liveblog",
+    "superdesk-core": "git+https://github.com/eos87/superdesk-client-core#v1.17.0-liveblog",
     "superdesk-ui-framework": "^1.8.13"
   },
   "engines": {
