Update dependency protocol to avoid issues
Github announced some improvements to git protocol on github. More info about it here:
https://github.blog/2021-09-01-improving-git-protocol-security-github/#no-more-unauthenticated-git

January 11, 2022 Final brownout.

This is the full brownout period where we’ll temporarily stop accepting the deprecated key and signature types, ciphers, and MACs, and the unencrypted Git protocol.
This will help clients discover any lingering use of older keys or old URLs.

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -94,7 +94,7 @@ jobs:
       run: |
         npm config set loglevel warn
         npm install -g grunt-cli
-        npm install
+        npm install -ddd
         npm run lint
 
     - name: Initialize app data
