--- a/client/package.json
+++ b/client/package.json
@@ -103,11 +103,10 @@
     "angular-vs-repeat": "1.1.7",
     "eslint-loader": "^2.1.2",
     "eventable": "git+https://github.com/madebymany/eventable",
-    "gridster": "0.5.6",
     "jquery": "^3.5.1",
     "jquery-jcrop": "0.9.13",
     "jquery-ui": "git+https://github.com/components/jqueryui#1.11.4",
-    "jquery.gridster": "git+https://github.com/dustmoo/gridster.js#c306335397816beceb74e4a176067baef34a0359",
+    "gridster": "github:superdesk/gridster.js#885d0c9",
     "lodash": "4.17.15",
     "lodash.sortbyorder": "3.4.4",
     "lr-infinite-scroll": "1.0.0",
