--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -94,7 +94,7 @@ jobs:
       run: |
         npm config set loglevel warn
         npm install -g grunt-cli
-        npm install -ddd
+        npm install
         npm run lint
 
     - name: Initialize app data
