--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,7 @@
     "eslint-plugin-angular": "3.1.1",
     "eslint-plugin-react": "^7.5.1",
     "fork-ts-checker-webpack-plugin": "^0.5.2",
-    "grunt": "1.0.1",
+    "grunt": "^1.4.1",
     "grunt-angular-gettext": "2.3.6",
     "grunt-angular-templates": "1.1.0",
     "grunt-contrib-clean": "1.1.0",
