Add `npm ls` to debug tslint issue

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -95,6 +95,7 @@ jobs:
         npm config set loglevel warn
         npm install -g grunt-cli
         npm install
+        npm ls --depth 1
         npm run lint
 
     - name: Initialize app data
