--- a/client/package.json
+++ b/client/package.json
@@ -88,6 +88,7 @@
     "@atlaskit/calendar": "10.1.0",
     "@atlaskit/datetime-picker": "10.0.1",
     "@atlaskit/icon": "21.1.2",
+    "@types/react-dom": "^16.9.15",
     "adblock-detect": "1.0.5",
     "angular": "1.6.9",
     "angular-animate": "1.6.1",
