--- a/server/logging_config.yml
+++ b/server/logging_config.yml
@@ -14,13 +14,18 @@ disable_existing_loggers: False
 handlers:
   console:
     class: logging.StreamHandler
-    stream  : ext://sys.stdout
+    stream: ext://sys.stdout
 loggers:
-  # superdesk.ws - used for debug message can be removed later on.
+  superdesk:
+    handlers: [console]
+    level: WARN
   superdesk.ws:
     handlers: [console]
     level: WARN
   superdesk.websockets_comms:
+    handlers: [console]
+    level: WARN
+  liveblog:
     handlers: [console]
     level: WARN
   liveblog.ws:
