--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -73,10 +73,10 @@ jobs:
       with:
         node-version: 10.x
 
-    - name: Setup Python 3.6.x
+    - name: Setup Python 3.6.15
       uses: actions/setup-python@v2
       with:
-        python-version: 3.6.x
+        python-version: 3.6.15
         architecture: x64
 
     - name: Install Python dependencies and run tests
