--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -93,7 +93,7 @@ jobs:
       run: |
         npm config set loglevel warn
         npm install -g grunt-cli
-        npm install
+        npm ci
         npm run lint
 
     - name: Initialize app data
