Replace uglify with terser because parsing issue
LBSD-2676

--- a/client/package.json
+++ b/client/package.json
@@ -45,7 +45,6 @@
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-cssmin": "2.2.1",
     "grunt-contrib-less": "1.4.1",
-    "grunt-contrib-uglify": "3.1.0",
     "grunt-contrib-watch": "1.0.0",
     "grunt-eslint": "^21.0.0",
     "grunt-filerev": "2.3.1",
@@ -68,6 +67,7 @@
     "style-loader": "0.19.0",
     "superdesk-code-style": "^1.2.0",
     "superdesk-ui-framework": "^1.8.14",
+    "terser-webpack-plugin-legacy": "^1.2.5",
     "ts-loader": "^3.5.0",
     "tslint": "^5.16.0",
     "typescript": "^3.9.6",
