--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "grunt build",
     "eslint": "grunt eslint",
-    "tslint": "tsc --noEmit && tslint -c tslint.json 'app/**/*.{ts,tsx}'",
+    "tslint": "tslint -c tslint.json 'app/**/*.{ts,tsx}'",
     "lint": "npm run eslint && npm run tslint",
     "webdriver-update": "./node_modules/protractor/bin/webdriver-manager update --gecko false --versions.chrome $CHROMEDRIVER_VERSION",
     "e2e": "./node_modules/.bin/protractor protractor-conf.js"
