--- a/client/package.json
+++ b/client/package.json
@@ -110,6 +110,7 @@
     "rangy": "1.3.0",
     "raven-js": "3.22.3",
     "react-select": "^3.0.4",
+    "react-social-media-embed": "^2.3.4",
     "sanitize-html": "^2.7.0",
     "sir-trevor": "git+https://github.com/liveblog/sir-trevor-js",
     "styled-components": "^5.1.1",
