--- a/server/liveblog/themes/themes_assets/default/package.json
+++ b/server/liveblog/themes/themes_assets/default/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog-default-theme",
-  "version": "3.6.58",
+  "version": "3.6.62",
   "description": "Liveblog 3 SEO theme",
   "author": "Paul Solbach <psolbach@dpa-newslab.com>, Massimo Scamarcia <massimo.scamarcia@sourcefabric.org>, Helmy Giacoman <helmy.giacoman@sourcefabric.org>",
   "license": "AGPL-3.0",
@@ -64,5 +64,8 @@
   },
   "devDependencies": {
     "gulp-install": "^1.1.0"
+  },
+  "volta": {
+    "node": "10.24.1"
   }
 }
