--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog",
-  "version": "3.82.5-rc3",
+  "version": "3.82.5",
   "repository": {
     "type": "git",
     "url": "git@github.com:liveblog/liveblog.git"
