--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,6 +12,7 @@ pymongo==3.11.2
 google-auth-oauthlib==0.2.0
 elastic-apm==6.15.1
 marshmallow<3.15.0
+dataclasses==0.8
 
 # Superdesk
 -e git+https://github.com/vstinner/hachoir.git@3.0a2#egg=hachoir3
