--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog",
-  "version": "3.85.0-rc1",
+  "version": "3.85.0",
   "repository": {
     "type": "git",
     "url": "git@github.com:liveblog/liveblog.git"
