--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,6 +6,13 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV PYENV_ROOT /root/.pyenv
 ENV PATH $PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH
 ENV C_FORCE_ROOT="true"
+ENV EMBED_PROTOCOL=http://
+ENV LIVEBLOG_DEBUG='True'
+ENV SYNDICATION='True'
+ENV SUBSCRIPTION_LEVEL='network'
+ENV SUPERDESK_URL=http://127.0.0.1:5000/api
+ENV SUPERDESK_CLIENT_URL=http://127.0.0.1:9000
+ENV MONGO_DBNAME=liveblog_dev
 
 # Install system packages
 RUN apt update && apt install -y \
