Separated liveblog services to be imported into main docker-compose.yml file

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,39 +1,9 @@
 services:
-  redis:
-    container_name: redis
-    image: "redis:alpine"
-    # ports:
-    #   - 6379:6379
-    volumes:
-      - ../data/redis:/data
-    network_mode: "host"
-
-  elasticsearch-1.7.2:
-    container_name: elasticsearch
-    image: barnybug/elasticsearch:1.7.2
-    # ports:
-    #   - 9200:9200
-    volumes:
-      - ../data/elastic:/usr/share/elasticsearch/data
-    network_mode: "host"
-
-  mongodb-3.4.23:
-    container_name: mongodb
-    image: mongo:3.4.23
-    # ports:
-    #   - 27017:27017
-    volumes:
-      - ../data/mongodb:/data/db
-    network_mode: "host"
-  
   liveblog_dev:
     build:
       context: ../
       dockerfile: docker/Dockerfile
     container_name: liveblog_dev
-    # ports:
-    #   - 5001:5001
-    #   - 9000:9000
     volumes:
       - ../server:/app/server
       - ../client:/app/client
@@ -42,3 +12,18 @@ services:
       - elasticsearch-1.7.2
       - mongodb-3.4.23
     network_mode: "host"
+      
+  redis:
+    extends:
+      file: docker-compose-services.yml
+      service: redis
+  
+  elasticsearch-1.7.2:
+    extends:
+      file: docker-compose-services.yml
+      service: elasticsearch-1.7.2
+        
+  mongodb-3.4.23:
+    extends:
+      file: docker-compose-services.yml
+      service: mongodb-3.4.23
