--- a/client/package.json
+++ b/client/package.json
@@ -57,13 +57,13 @@
     "load-grunt-config": "0.19.2",
     "load-grunt-tasks": "3.5.2",
     "ngtemplate-loader": "2.0.1",
-    "node-sass": "^4.14.1",
     "phantomjs": "^2.1.3",
     "protractor": "5.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "request": "^2.79.0",
-    "sass-loader": "6.0.6",
+    "sass": "^1.26.0",
+    "sass-loader": "^7.3.1",
     "style-loader": "0.19.0",
     "superdesk-code-style": "^1.2.0",
     "superdesk-ui-framework": "^1.8.14",
