--- a/server/liveblog/themes/themes_assets/default/package.json
+++ b/server/liveblog/themes/themes_assets/default/package.json
@@ -40,7 +40,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.5",
-    "iframe-resizer": "^4.3.1",
+    "iframe-resizer": "4.3.6",
     "imagesloaded": "^4.1.4",
     "liveblog-shared-tools": "eos87/liveblog-shared-tools",
     "lory.js": "^2.5.3",
