--- a/server/liveblog/themes/themes_assets/default/package.json
+++ b/server/liveblog/themes/themes_assets/default/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog-default-theme",
-  "version": "3.6.68",
+  "version": "3.6.69",
   "description": "Liveblog 3 SEO theme",
   "author": "Paul Solbach <psolbach@dpa-newslab.com>, Massimo Scamarcia <massimo.scamarcia@sourcefabric.org>, Helmy Giacoman <helmy.giacoman@sourcefabric.org>",
   "license": "AGPL-3.0",
@@ -40,7 +40,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.5",
-    "iframe-resizer": "^4.3.1",
+    "iframe-resizer": "4.3.6",
     "imagesloaded": "^4.1.4",
     "liveblog-shared-tools": "eos87/liveblog-shared-tools",
     "lory.js": "^2.5.3",
