--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -84,7 +84,7 @@ jobs:
         pip install 'pip<=20.2.3'
         pip install 'setuptools<50'
         pip install -r dev-requirements.txt
-        pytest --ignore=src/ -v
+        pytest --ignore=src/ --disable-pytest-warnings -v
         behave --format progress2 --logging-level ERROR
 
     - name: Install Nodejs dependencies and lint
