--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "btoa": "1.1.2",
     "classnames": "2.2.5",
     "css-loader": "0.28.7",
+    "cypress": "^6.9.1",
     "eslint": "^6.7.2",
     "eslint-plugin-angular": "3.1.1",
     "eslint-plugin-react": "^7.5.1",
