--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "tslint": "tslint -c tslint.json 'app/**/*.{ts,tsx}'",
     "lint": "npm run eslint && npm run tslint",
     "webdriver-update": "./node_modules/protractor/bin/webdriver-manager update --gecko false --versions.chrome $CHROMEDRIVER_VERSION",
-    "e2e": "./node_modules/.bin/protractor protractor-conf.js"
+    "e2e": "./node_modules/.bin/protractor protractor-conf.js",
+    "cypress:open": "./node_modules/.bin/cypress open"
   },
   "licenses": [
     {
@@ -32,7 +33,7 @@
     "btoa": "1.1.2",
     "classnames": "2.2.5",
     "css-loader": "0.28.7",
-    "cypress": "^6.9.1",
+    "cypress": "^13.7.2",
     "eslint": "^6.7.2",
     "eslint-plugin-angular": "3.1.1",
     "eslint-plugin-react": "^7.5.1",
