--- a/server/liveblog/prepopulate/data_init/instance_settings.json
+++ b/server/liveblog/prepopulate/data_init/instance_settings.json
@@ -28,24 +28,28 @@
             "features": {
                 "syndication": true,
                 "marketplace": false,
-                "theme_styles": false
+                "theme_styles": false,
+                "custom_themes": false
             },
             "limits": {
                 "blogs": 1,
                 "themes": 1,
-                "blog_members": 1
+                "blog_members": 1,
+                "custom_themes": 0
             }
         },
         "team": {
             "features": {
                 "syndication": true,
                 "marketplace": true,
-                "theme_styles": true
+                "theme_styles": true,
+                "custom_themes": true
             },
             "limits": {
                 "blogs": 3,
                 "themes": 6,
-                "blog_members": 5
+                "blog_members": 5,
+                "custom_themes": 5
             }
         }
     }
