--- a/server/liveblog/themes/themes_assets/amp/package.json
+++ b/server/liveblog/themes/themes_assets/amp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog-amp-theme",
-  "version": "3.4.13",
+  "version": "3.4.14",
   "description": "Liveblog 3 AMP theme",
   "author": "Sourcefabric <contact@sourcefabric.org>",
   "license": "AGPL-3.0",
@@ -9,6 +9,9 @@
     "build": "gulp"
   },
   "dependencies": {
-    "liveblog-default-theme": "3.5.10"
+    "liveblog-default-theme": "3.6.70"
+  },
+  "volta": {
+    "node": "10.24.1"
   }
 }
