Added first name and last name to worflow

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -100,7 +100,7 @@ jobs:
       run: |
         python app_init_elastic.py
         python manage.py app:initialize_data
-        python manage.py users:create -u admin -p admin -e 'admin@example.com' --admin
+        python manage.py users:create -u admin -p admin -fn Admin -ln Admin -e 'admin@example.com' --admin
         python manage.py register_local_themes
         python manage.py register_bloglist
 
