--- a/server/liveblog/themes/themes_assets/classic/package.json
+++ b/server/liveblog/themes/themes_assets/classic/package.json
@@ -28,5 +28,8 @@
     "gulp-uglify": "^1.5.3",
     "gulp-wrap": "^0.11.0",
     "gulp-zip": "^3.2.0"
+  },
+  "volta": {
+    "node": "10.24.1"
   }
 }
