--- a/server/liveblog/themes/themes_assets/amp/package.json
+++ b/server/liveblog/themes/themes_assets/amp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog-amp-theme",
-  "version": "3.4.35",
+  "version": "3.5.0",
   "description": "Liveblog 3 AMP theme",
   "author": "Sourcefabric <contact@sourcefabric.org>",
   "license": "AGPL-3.0",
@@ -9,7 +9,7 @@
     "build": "gulp"
   },
   "dependencies": {
-    "liveblog-default-theme": "3.9.0"
+    "liveblog-default-theme": "3.9.0-dev.6"
   },
   "volta": {
     "node": "10.24.1"
